--- a/index.html
+++ b/index.html
@@ -3,15 +3,17 @@
 <head>
   <meta charset="utf-8">
   <title>Olist Dashboard</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
-    body {font-family: system-ui, sans-serif; padding: 2rem; text-align: center;}
-    a.button {display:inline-block; padding:.8rem 1.2rem; background:#0969da; color:#fff; border-radius:8px; text-decoration:none}
+    html,body {height:100%; margin:0}
+    .wrap {height:100vh; display:flex; flex-direction:column}
+    header {padding:12px 16px; border-bottom:1px solid #eaecef; font: 600 16px/1.2 system-ui, -apple-system, Segoe UI, Roboto, sans-serif;}
+    iframe {border:0; width:100%; height:100%}
   </style>
 </head>
 <body>
-  <h1>Welcome to my Olist Analysis Portfolio</h1>
-  <p>You can explore the interactive dashboard here:</p>
-  <p><a class="button" href="dashboard.html">📊 View Dashboard</a></p>
-  <p>or go directly to Render: <a href="https://olist-analysis-dashboard.onrender.com/">olist-analysis-dashboard.onrender.com</a></p>
+  <div class="wrap">
+    <iframe src="https://olist-analysis-dashboard.onrender.com/" title="Olist Dashboard"></iframe>
+  </div>
 </body>
 </html>
